--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -1,7 +1,18 @@
 [bumpversion]
 current_version = {{ cookiecutter.version }}
 commit = True
-tag = True
+tag = False
+message = Bump version: {current_version} → {new_version}
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(-(?P<release>[a-z]+))?
+serialize = 
+	{major}.{minor}.{patch}-{release}
+	{major}.{minor}.{patch}
+
+[bumpversion:part:release]
+optional_value = prod
+values = 
+	dev
+	prod
 
 [bumpversion:file:setup.py]
 search = version='{current_version}'
@@ -11,14 +22,36 @@ replace = version='{new_version}'
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
+[bumpversion:file:.conda/meta.yaml]
+search = "version = {current_version}"
+
+[bumpversion:file:.gitlab-ci.yml]
+search = "PACKAGE_VERSION: {current_version}"
+
+[bumpversion:file:setup.py]
+search = "version={current_version}"
+
+[bumpversion:file:docs/conf.py]
+search = "release = {current_version}"
+
 [bdist_wheel]
 universal = 1
 
-[flake8]
-exclude = docs
-
 [aliases]
-{%- if cookiecutter.use_pytest == 'y' %}
 test = pytest
-{%- endif %}
-# Define setup.py command aliases here
+
+[tool:pytest]
+addopts = -sx -vv --ignore=setup.py --ignore=docs/ --ignore=build/
+
+[flake8]
+max-line-length = 100
+ignore = D100,D101,D102,D103,D105,D301,E402,W503,E124,E211
+exclude = docs,__init__.py,build
+
+[isort]
+line_length = 100
+forced_separate = django.contrib,django.utils
+
+[yapf]
+column_limit = 100
+based_on_style = google
