--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -4,13 +4,13 @@ commit = True
 tag = False
 message = Bump version: {current_version} → {new_version}
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(-(?P<release>[a-z]+))?
-serialize = 
+serialize =
 	{major}.{minor}.{patch}-{release}
 	{major}.{minor}.{patch}
 
 [bumpversion:part:release]
 optional_value = prod
-values = 
+values =
 	dev
 	prod
 
@@ -33,6 +33,9 @@ search = "version={current_version}"
 
 [bumpversion:file:docs/conf.py]
 search = "release = {current_version}"
+
+[bumpversion:file:README.md]
+search = "docs-v{current_version}-blue"
 
 [bdist_wheel]
 universal = 1
