--- a/{{cookiecutter.project_slug}}/.conda/meta.yaml
+++ b/{{cookiecutter.project_slug}}/.conda/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: {{ cookiecutter.project_slug }}
-  version: {{ cookiecutter.version }}
+  version: "{{ cookiecutter.version }}"
 
 source:
   path: ../
