--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -3,15 +3,15 @@ current_version = {{ cookiecutter.version }}
 commit = True
 tag = False
 message = Bump version: {current_version} → {new_version}
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(-(?P<release>[a-z]+))?
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+\d+))?
 serialize =
-	{major}.{minor}.{patch}-{release}
+	{major}.{minor}.{patch}.{release}
 	{major}.{minor}.{patch}
 
 [bumpversion:part:release]
 optional_value = prod
 values =
-	dev
+	dev0
 	prod
 
 [bumpversion:file:setup.py]
@@ -27,9 +27,6 @@ search = "version = {current_version}"
 
 [bumpversion:file:.gitlab-ci.yml]
 search = "PACKAGE_VERSION: {current_version}"
-
-[bumpversion:file:docs/conf.py]
-search = "release = {current_version}"
 
 [bumpversion:file:README.md]
 search = "docs-v{current_version}-blue"
