--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -38,16 +38,18 @@ universal = 1
 test = pytest
 
 [tool:pytest]
-addopts = -sx -vv --ignore=setup.py --ignore=docs/ --ignore=build/
+addopts = -x --ignore=setup.py --ignore=docs/ --ignore=build/
 
 [flake8]
 max-line-length = 100
-ignore = D100,D101,D102,D103,D105,D301,E402,W503,E124,E211
-exclude = docs,__init__.py,build
+ignore = D100,D101,D102,D103,D105,D301,E402,W503,E124,E129,E211
+exclude = docs,__init__.py,build,run_test.py
 
 [isort]
+known_first_party = {{ cookiecutter.project_slug }}
 line_length = 100
 forced_separate = django.contrib,django.utils
+skip = docs,build,__init__.py
 
 [yapf]
 column_limit = 100
