Fix script to rename wheels

--- a/{{cookiecutter.project_slug}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_slug}}/.gitlab-ci.yml
@@ -135,8 +135,8 @@ pages:
     # Rename wheels from `-linux_x86_64.whl` to `-manylinux1_x86_64.whl`
     # so that they can be uploaded to PyPI.
     - for i in $CI_PROJECT_DIR/conda-bld/linux-64/*.whl ; do
-      echo $i
-      mv "${i}" "${i%%-linux_x86_64.whl}-manylinux1_x86_64.whl"
+      echo $i;
+      mv "${i}" "${i%%-linux_x86_64.whl}-manylinux1_x86_64.whl";
       done
     # Upload package to Anaconda and PyPi repos.
     - case "${PACKAGE_VERSION}" in
