--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -42,15 +42,21 @@ addopts = -x --ignore=setup.py --ignore=docs/ --ignore=build/
 
 [flake8]
 max-line-length = 100
-ignore = D100,D101,D102,D103,D105,D301,E402,W503,E124,E129,E211
-exclude = docs,__init__.py,build,run_test.py
+ignore = D100,D101,D102,D103,D105,D301,E402,W503,E124,E211
+exclude = docs,__init__.py,build,.conda_packages
 
 [isort]
-known_first_party = {{ cookiecutter.project_slug }}
 line_length = 100
 forced_separate = django.contrib,django.utils
-skip = docs,build,__init__.py
+skip = docs,setup.py,.conda_packages
+default_section = THIRDPARTY
+known_first_party = {{ cookiecutter.project_slug }}
 
 [yapf]
 column_limit = 100
 based_on_style = google
+
+[mypy]
+follow_imports = silent
+ignore_missing_imports = true
+warn_unused_ignores = true
